Added some feedback messages, different colors, buttons
